# melodeus-browser

./: .gitignore  README.md
melodeus_browser/: Cargo.toml  env-stub.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
melodeus_browser/src/: aec.rs  cpal_webaudio_inputs.rs  lib.rs
melodeus_browser/src/speex/c2rust/: alloc.rs  fftwrap.rs  kiss_fft.rs  kiss_fftr.rs  mdf.rs  mod.rs  resample.rs  smallft.rs
melodeus_browser/worklets/: cpal-input-processor.js
