[package]
name = "melodeus_browser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
cpal = { version = "0.16", features = ["wasm-bindgen"] }
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }
thiserror = "2.0.17"
ringbuf = "0.4.8"
console_error_panic_hook = "0.1.5"

aec3 = { path = "../../aec3-rs" }
rustfft = "6.4.1"
hound = "3.5.1"
cfg-if = "1.0.4"
futures = "0.3.31"


# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "AudioContext",
    "AudioContextOptions",
    "AudioWorklet",
    "AudioWorkletNode",
    "Blob",
    "BlobPropertyBag",
    "MediaDevices",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MessageEvent",
    "MessagePort",
    "Navigator",
    "Url",
]


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
